started parallel prefix

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -117,6 +117,16 @@
 	url = "https://ipcc.cs.uoregon.edu/lectures/lecture-10-pipeline.pdf",
 }
 
+
+@online{parprefix, 
+	author =  "David Walker - Princeton University",
+	
+	title = "Parallel Scans \& Prefix Sums",
+	
+	urldate = "2020-14-05",
+	
+	url = "https://www.cs.princeton.edu/courses/archive/fall13/cos326/lec/23-parallel-scan.pdf",
+}
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
 	CTLmax_names_forced_etal = "3",
