--- a/doc/cp2019-20_project_47590_48425.tex
+++ b/doc/cp2019-20_project_47590_48425.tex
@@ -329,6 +329,21 @@ When we raise the weight to 1500, we can see that even at 500 jobs, it becomes w
 
 We can conclude that the multiple maps created ($ 2n $, with $ n $ being the tree height) add a lot to the management cost of this algorithm. Even though this algortihm does show great speedups, it only does so when the computational weight of the jobs it is doing is relatively demanding.
 
+% Recurrence --------------------------------------------------------------	
+\subsection{The Recurrence Pattern}
+
+\subsubsection{Implementation}
+
+\subsubsection{Testing}
+
+% Quick-Sort --------------------------------------------------------------	
+\subsection{The Quick-Sort Algorithm}
+
+\subsubsection{Implementation}
+
+\subsubsection{Testing}
+
+
 \section{Acknowledgments}
 
 \bibliographystyle{IEEEtran}
