--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -119,7 +119,7 @@
 
 
 @online{parprefix, 
-	author =  "David Walker - Princeton University",
+	author =  "David Walker (Princeton University)",
 	
 	title = "Parallel Scans \& Prefix Sums",
 	
@@ -127,6 +127,17 @@
 	
 	url = "https://www.cs.princeton.edu/courses/archive/fall13/cos326/lec/23-parallel-scan.pdf",
 }
+
+@book{introalgs, 
+	author =  "Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein",
+	
+	title = "Introduction to Algorithms 3rd Edition",
+	
+	publisher = "The MIT Press",
+	
+	year = "2009"
+}
+
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
 	CTLmax_names_forced_etal = "3",
