will start to review

--- a/doc/cp2019-20_project_47590_48425.tex
+++ b/doc/cp2019-20_project_47590_48425.tex
@@ -367,13 +367,22 @@ We conclude that this algorithm shows great performance and parallelization, wit
 
 \section{Acknowledgments}
 
+From this section on, I will speak in first person, as \textbf{Filipe}, in order to avoid confusion.
+
+Even though I did not directly contact anyone throughout the project, doing so wasn't really necessary as we had the \textit{Piazza} platform. I'd like to acknowledge everyone who participated in the platform as I believe we all benefited from it. Personally I, did not extract much from the platform as I'd search the books and the Internet (specially \textit{Intel's} \textit{OpenMP} forums and \textit{OpenMP's} documentation) for answers.
+
+My colleague did ask a few questions in \textit{Piazza}, so I'd like to mention and thank the following people on our behalf:
+
+- João Manuel Ferreira dos Santos - regarding the correctness of our Farm implementation.
+
+- Ema Rodrigues Vieira - regarding the use of a lone memcpy in the default reduce implementation
+
 \bibliographystyle{IEEEtran}
 \bibliography{IEEEabrv,biblio}{}
 
 \section{Work Division}
 
-\section{Comments}
-
+The work division for the project implementation was, unfortunately, me doing around 95\% of the work and my colleague the rest. As for the report, Gabriel unfortunately decided, at the last minute, not to contribute to the report as he wished to forfeit the course.
 
 \end{document}
 
