--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -65,6 +65,18 @@
 	url = "https://www.drdobbs.com/parallel/parallel-pattern-9-pack/222000295",
 }
 
+@online{dobbgather,
+	author =  "Michael McCool",
+	
+	title = "Parallel Pattern 4: Gather",
+	
+	urldate = "2020-14-05",
+	
+	year = "2009",
+	
+	url = "https://www.drdobbs.com/parallel/parallel-pattern-4-gather/222600465",
+}
+
 @online{lockmanage,
 	author =  "Paul Lindberg",
 	
@@ -133,7 +145,7 @@
 	
 	title = "Introduction to Algorithms 3rd Edition",
 	
-	publisher = "The MIT Press",
+	publisher = "The MIT Press"
 	
 	year = "2009"
 }
