--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -8,7 +8,7 @@
   
   urldate = "2020-14-05",
   
-  url = "https://www.gnu.org/software/libc/manual/html\_node/Argp.html",
+  url = "https://bit.ly/2LxFcyd",
 }
 
 @online{omp, 
@@ -28,7 +28,7 @@
 	
 	urldate = "2020-14-05",
 	
-	url = "https://www.openmp.org/spec-html/5.0/openmpsu107.html/",
+	url = "https://bit.ly/3dRb8JU",
 }
 
 @online{matplotlib,
@@ -38,7 +38,7 @@
 	
 	urldate = "2020-14-05",
 	
-	url = "https://matplotlib.org/tutorials/introductory/pyplot.html",
+	url = "https://bit.ly/2z8vuzF",
 }
 
 @book{mccool,
@@ -50,11 +50,13 @@
 	
 	year = "2012",
 	
-	isbn = "978-0-12-415993-8"
+	isbn = "978-0-12-415993-8",
 }
 
-@online{dobbpack,
+@article{dobbpack,
 	author =  "Michael McCool",
+	
+	journal = "Dr Dobb's",
 	
 	title = "Parallel Pattern 9: Pack",
 	
@@ -62,11 +64,13 @@
 	
 	year = "2009",
 	
-	url = "https://www.drdobbs.com/parallel/parallel-pattern-9-pack/222000295",
+	url = "https://bit.ly/2z7LQIF",
 }
 
-@online{dobbgather,
+@article{dobbgather,
 	author =  "Michael McCool",
+	
+	journal = "Dr Dobb's",
 	
 	title = "Parallel Pattern 4: Gather",
 	
@@ -74,11 +78,13 @@
 	
 	year = "2009",
 	
-	url = "https://www.drdobbs.com/parallel/parallel-pattern-4-gather/222600465",
+	url = "https://bit.ly/2z3p44E",
 }
 
-@online{lockmanage,
+@article{lockmanage,
 	author =  "Paul Lindberg",
+	
+	journal = "Intel",
 	
 	title = "Performance Obstacles for Threading: How do they affect OpenMP code?",
 	
@@ -86,13 +92,15 @@
 	
 	year = "2009",
 	
-	url = "https://software.intel.com/content/www/us/en/develop/articles/performance-obstacles-for-threading-how-do-they-affect-openmp-code.html",
+	url = "https://intel.ly/2AtFnYT",
 }
 
-@online{jlfarm,
+@misc{jlfarm,
 	author =  "Joao M. Lourenço",
 	
-	title = "Piazza: Why I'm getting better time speedups when I use more software threads than hardware threads?",
+	journal = "Piazza",
+	
+	title = "Why I'm getting better time speedups when I use more software threads than hardware threads?",
 	
 	urldate = "2020-14-05",
 	
@@ -106,7 +114,7 @@
 	
 	year = "2018",
 	
-	journal = "IWOMP 2018 - 14th International Workshop on OpenMP for Evolving Architectures",
+	journal = "IWOMP 2018",
 }
 
 @online{omporder, 
@@ -116,7 +124,7 @@
 	
 	urldate = "2020-14-05",
 	
-	url = "https://www.openmp.org/spec-html/5.0/openmpsu97.html",
+	url = "https://bit.ly/3dUaWti",
 }
 
 @online{pipelineoregon, 
@@ -126,7 +134,7 @@
 	
 	urldate = "2020-14-05",
 	
-	url = "https://ipcc.cs.uoregon.edu/lectures/lecture-10-pipeline.pdf",
+	url = "https://bit.ly/3cIar5t",
 }
 
 
@@ -137,7 +145,7 @@
 	
 	urldate = "2020-14-05",
 	
-	url = "https://www.cs.princeton.edu/courses/archive/fall13/cos326/lec/23-parallel-scan.pdf",
+	url = "https://bit.ly/2XaSlmi",
 }
 
 @book{introalgs, 
@@ -145,9 +153,9 @@
 	
 	title = "Introduction to Algorithms 3rd Edition",
 	
-	publisher = "The MIT Press"
+	publisher = "The MIT Press",
 	
-	year = "2009"
+	year = "2009",
 }
 
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
